# ai-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
ai-interface/: .env.development  .env.example  .env.local  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
ai-interface/app/: main.py
ai-interface/app/api/: __init__.py  deps.py
ai-interface/app/api/v1/: __init__.py  api.py
ai-interface/app/api/v1/endpoints/: __init__.py  code.py  collection.py  document.py  file.py  health.py  llm.py  search.py  vector.py  vector_backup.py
ai-interface/app/core/: lifespan.py
ai-interface/app/core/config/: dependencies.py  environment.py  settings.py
ai-interface/app/core/database/: dependencies.py  vector_connection.py
ai-interface/app/core/exception/: global_exception_handler.py
ai-interface/app/core/utils/: __init__.py  file_path.py
ai-interface/app/core/utils/logging/: __init__.py  config.py  formatters.py  helpers.py
ai-interface/app/domains/code/: code_executor.py  code_generator.py  dependencies.py  schemas.py  service.py
ai-interface/app/domains/collection/: __init__.py  dependencies.py  repository.py  schemas.py  service.py
ai-interface/app/domains/document/: __init__.py  constants.py  dependencies.py  repository.py  schemas.py  service.py
ai-interface/app/domains/file/: constants.py  dependencies.py  file_extractor.py  schemas.py  service.py
ai-interface/app/domains/llm/: __init__.py  dependencies.py  schemas.py  service.py
ai-interface/app/domains/search/: __init__.py  dependencies.py  repository.py  schemas.py  service.py
ai-interface/app/domains/vector/: dependencies.py  repository.py  service.py
ai-interface/app/domains/vector_backup/: __init__.py  dependencies.py  schemas.py  utils.py
ai-interface/app/infra/ai/code/: code_generator.py
ai-interface/app/infra/ai/llm/: constants.py  dependencies.py  llm_manager.py  schemas.py
ai-interface/app/infra/code/: code_file_manager.py  constants.py  dependencies.py  executor.py
ai-interface/app/infra/docker/: client.py  constants.py  dependencies.py  schemas.py
ai-interface/app/infra/vector_db/: __init__.py  client.py  connection.py  dependencies.py  embedding.py  extension.py  vectorstore_factory.py
ai-interface/app/view/: __init__.py  router.py
ai-interface/prompts/system/: analysis.yaml  code_generation.yaml  code_modification.yaml  example.yaml  prompt-example.yaml
ai-interface/templates/: chat.html  code.html  index.html  vector.html
ai-interface/tests/: conftest.py  test_docker_client.py  test_docker_code_executor.py
claude/: plan.md
(+134 files in other folders)
