[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "notebook>=7.5.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    # Database drivers
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary,pool]>=3.0.0",
    "greenlet>=3.1.0",
    # Vector database
    "pgvector>=0.3.0",
    # Embedding models
    "sentence-transformers>=3.0.0",
    # Document processing
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "pymupdf>=1.27.1",
    "langchain-core>=1.2.8",
    "python-multipart>=0.0.22",
    "llama-cloud>=1.4.0",
    "sse-starlette>=2.1.3",
    "pandas>=3.0.0",
    "langgraph-checkpoint-postgres>=3.0.4",
    # STT and audio processing
    "whisperx>=3.8.1",
    "seaborn>=0.13.2",
    "koreanize-matplotlib>=0.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
