[project]
name = "ai-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.2",
    "langchain-community>=0.3.29",
    "langchain-postgres>=0.0.15",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
