[project]
name = "ai-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "docker>=7.0.0",
    "document>=1.0",
    "docx>=0.2.4",
    "fastapi>=0.116.2",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langchain-postgres>=0.0.15",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
